--- a/app/src/main/res/layout/content_shopping_list.xml
+++ b/app/src/main/res/layout/content_shopping_list.xml
@@ -9,31 +9,25 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.theforce.shoppingassistant.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context="com.theforce.shoppingassistant.ShoppingListActivity"
+    tools:showIn="@layout/activity_shopping_list">
 
-    <ImageView
-        android:layout_width="260dp"
-        android:layout_height="260dp"
-        android:id="@+id/logo"
-        android:src="@drawable/logo"
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="300dp"
+        android:id="@+id/listView"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        style="@style/MyRoundedButton"
-        android:text="+ Ny inköpslista"
-        android:id="@+id/button"
-        android:layout_below="@+id/logo"
-        android:onClick="newShoppingList"
+        android:layout_alignParentStart="true"
+        android:textSize="20sp"
         />
 
     <Button
         style="@style/MyRoundedButton"
-        android:text="Mina listor"
-        android:id="@+id/button2"
-        android:layout_below="@+id/button"
+        android:text="Börja handla"
+        android:id="@+id/button3"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
         />
 
 </RelativeLayout>
