--- a/app/src/main/res/layout/content_shopping_list.xml
+++ b/app/src/main/res/layout/content_shopping_list.xml
@@ -28,6 +28,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
+        android:onClick="startShopping"
         />
 
 </RelativeLayout>
