--- a/app/src/main/res/layout/content_new_item.xml
+++ b/app/src/main/res/layout/content_new_item.xml
@@ -26,4 +26,13 @@
         android:layout_below="@+id/search_field"
         />
 
+    <Button
+        style="@style/MyRoundedButton"
+        android:layout_width="wrap_content"       android:layout_height="wrap_content"
+        android:text="Scan"
+        android:id="@+id/button4"
+        android:onClick="scanNow"
+        android:layout_below="@+id/search_field"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
