--- a/app/src/main/res/layout/content_new_item.xml
+++ b/app/src/main/res/layout/content_new_item.xml
@@ -32,7 +32,7 @@
         android:text="Scan"
         android:id="@+id/button4"
         android:onClick="scanNow"
-        android:layout_below="@+id/search_field"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="54dp" />
 </RelativeLayout>
