--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#168b87</color>
+    <color name="colorPrimaryDark">#13706d</color>
+    <color name="colorAccent">#f24236</color>
     <color name="colorBlack">#000000</color>
     <color name="colorGray">#7A7A7A</color>
+    <color name="actionBarPrimary">#168b87</color>
 </resources>
