--- a/app/src/main/res/layout/content_new_item.xml
+++ b/app/src/main/res/layout/content_new_item.xml
@@ -26,7 +26,7 @@
         android:layout_below="@+id/search_field"
         />
 
-    <Button
+    <!--<Button
         style="@style/MyRoundedButton"
         android:layout_width="wrap_content"       android:layout_height="wrap_content"
         android:text="Scan"
@@ -34,5 +34,5 @@
         android:onClick="scanNow"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="54dp" />
+        android:layout_marginBottom="54dp" />-->
 </RelativeLayout>
