--- a/app/src/main/res/layout/content_shopping.xml
+++ b/app/src/main/res/layout/content_shopping.xml
@@ -21,22 +21,36 @@
         android:layout_centerHorizontal="true" />
 
     <TextView
-        android:id="@+id/currentItem"
+        android:id="@+id/currentItemName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:layout_below="@+id/arrow"
-        android:text="Mjölk"
-        android:textSize="34sp"
+        android:text="Name"
+        android:textSize="40sp"
         android:layout_marginTop="20dp"
         android:textColor="@color/colorBlack"
+        android:onClick="itemChecked"
+        />
+
+    <TextView
+        android:id="@+id/currentItemCategory"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:layout_below="@+id/currentItemName"
+        android:text="Category"
+        android:textSize="18sp"
+        android:layout_marginTop="4dp"
+        android:textColor="@color/colorGray"
+        android:onClick="itemChecked"
         />
 
     <ListView
         android:layout_width="wrap_content"
-        android:layout_height="300dp"
+        android:layout_height="match_parent"
         android:id="@+id/listView"
-        android:layout_below="@+id/currentItem"
+        android:layout_below="@+id/currentItemCategory"
         android:textSize="20sp"
         android:layout_marginTop="20dp"
         />
