--- a/app/src/main/res/layout/content_shopping_list.xml
+++ b/app/src/main/res/layout/content_shopping_list.xml
@@ -14,12 +14,12 @@
 
     <ListView
         android:layout_width="wrap_content"
-        android:layout_height="300dp"
+        android:layout_height="450dp"
         android:id="@+id/listView"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:textSize="20sp"
-        />
+        android:layout_alignParentLeft="true" />
 
     <Button
         style="@style/MyRoundedButton"
