--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorBlack">#000000</color>
     <color name="colorGray">#7A7A7A</color>
     <color name="actionBarPrimary">#168b87</color>
+    <color name="colorLightGray">#EBEBEB</color>
 </resources>
