--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,7 +7,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="50dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.theforce.shoppingassistant.MainActivity"
     tools:showIn="@layout/activity_main">
@@ -22,18 +22,20 @@
 
     <Button
         style="@style/MyRoundedButton"
-        android:text="+ Ny inköpslista"
+        android:text="+ New shopping list"
         android:id="@+id/button"
         android:layout_below="@+id/logo"
         android:onClick="newShoppingList"
+        android:stateListAnimator="@null"
         />
 
     <Button
         style="@style/MyRoundedButton"
-        android:text="Mina listor"
+        android:text="My lists"
         android:id="@+id/button2"
         android:layout_below="@+id/button"
         android:layout_centerHorizontal="true"
+        android:stateListAnimator="@null"
         />
 
 </RelativeLayout>
