--- a/app/src/main/res/layout/content_shopping.xml
+++ b/app/src/main/res/layout/content_shopping.xml
@@ -7,7 +7,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="40dp"
+    android:paddingTop="16dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.theforce.shoppingassistant.ShoppingActivity"
     tools:showIn="@layout/activity_shopping">
@@ -16,9 +16,10 @@
         android:layout_width="50dp"
         android:layout_height="32dp"
         android:id="@+id/arrow"
-        android:src="@drawable/arrow"
+        android:src="@drawable/arrow2"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"/>
 
     <TextView
         android:id="@+id/currentItemName"
@@ -28,7 +29,7 @@
         android:layout_below="@+id/arrow"
         android:text="Name"
         android:textSize="40sp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:textColor="@color/colorBlack"
         android:onClick="itemChecked"
         />
